修复使用已过时的 API的问题